fix layout issues ---work in progress

--- a/css/styles.css
+++ b/css/styles.css
@@ -174,5 +174,7 @@ div #recipe-img {
 
 #recipe-image{
   background-color: brown;
+  width: 100%;
+  height: 100%;
 }
 
